--- a/SecurePasswordAndroid/app/src/main/res/values/strings.xml
+++ b/SecurePasswordAndroid/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">SecurePassword</string>
+    <string name="app_name">Secure Password</string>
 
     <string name="hello_world">Hello world</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_reset">Reset</string>
+    <string name="safebox">Safe Box</string>
+    <string name="changepassword">Change Password</string>
+    <string name="cloudsync">Cloud Sync</string>
+    <string name="import_">Import</string>
+    <string name="export">Export</string>
 </resources>
