--- a/SecurePasswordAndroid/app/src/main/res/values/strings.xml
+++ b/SecurePasswordAndroid/app/src/main/res/values/strings.xml
@@ -15,10 +15,14 @@
     <string name="login">登录</string>
     <string name="login_guide">请输入您的密码\n如果这是您第一次登录\n您的密码将会被设置</string>
     <string name="cancel">取消</string>
-    <string name="reset_guide">请输入您的新密码\n这将清空您所有的密码</string>
+    <string name="reset_guide">请输入您的新密码\n这将清空您的所有记录</string>
     <string name="edit">编辑</string>
     <string name="app">应用:</string>
     <string name="acount">账户:</string>
     <string name="password">密码:</string>
     <string name="sync">同步</string>
+    <string name="confirm">确认</string>
+    <string name="wrong_password">密码错误</string>
+    <string name="wrong_safe_file">密码文件版本错误\n请尝试重置</string>
+    <string name="unable_to_access_file">无法访问密码文件</string>
 </resources>
