--- a/SecurePasswordAndroid/app/src/main/res/values/strings.xml
+++ b/SecurePasswordAndroid/app/src/main/res/values/strings.xml
@@ -25,4 +25,16 @@
     <string name="wrong_password">密码错误</string>
     <string name="wrong_safe_file">密码文件版本错误\n请尝试重置</string>
     <string name="unable_to_access_file">无法访问密码文件</string>
+    <string name="title_activity_edit_actibity">EditActibity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="old_password">旧密码:</string>
+    <string name="generate_password">生成密码</string>
+    <string name="length">长度</string>
+    <string name="uppercase">大写字母</string>
+    <string name="number">数字</string>
+    <string name="symbol">特殊符号</string>
+    <string name="first_char_letter">首位是字母</string>
+    <string name="at_least_one_number">至少一个数字</string>
+    <string name="at_least_one_symbol">至少一个符号</string>
 </resources>
