--- a/SecurePasswordAndroid/app/src/main/res/values/strings.xml
+++ b/SecurePasswordAndroid/app/src/main/res/values/strings.xml
@@ -38,4 +38,10 @@
     <string name="at_least_one_number">至少一个数字</string>
     <string name="at_least_one_symbol">至少一个符号</string>
     <string name="wrong_length">长度错误</string>
+    <string name="use_my_password">使用我的密码</string>
+    <string name="choose">选择</string>
+    <string name="import_file">导入的文件</string>
+    <string name="export_file">导出的文件</string>
+    <string name="import_file_password">导入文件密码</string>
+    <string name="export_file_password">导出文件密码</string>
 </resources>
